fix: remove moduls and back to previous version

--- a/amazon.html
+++ b/amazon.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Amazon Project</title>
-    
+
     <!-- This code is needed for responsive design to work.
       (Responsive design = make the website look good on
       smaller screen sizes like a phone or a tablet). -->
@@ -45,17 +45,17 @@
 
         <a class="cart-link header-link" href="checkout.html">
           <img class="cart-icon" src="images/icons/cart-icon.png">
-          <div class="cart-quantity js-cart-quantity"></div>
+          <div class="cart-quantity js-cart-quantity">0</div>
           <div class="cart-text">Cart</div>
         </a>
       </div>
     </div>
-    
+
     <div class="main">
       <div class="products-grid js-products-grid">
       </div>
     </div>
+
+    <script type="module" src="scripts/amazon.js"></script>
   </body>
- 
-  <script type="module" src="scripts/amazon.js"></script>
 </html>
